--- a/resume.html
+++ b/resume.html
@@ -32,8 +32,8 @@
                 </ul>
                 <h2 class="name">Rajesh Dulal</h2>
                 <ul class="contact-info"> <!--Inspired from my old website :https://dulalrajesh.com.np -->
-                    <li><i class="fas fa-envelope me-2"></i><a href="mailto:rdulal71@gmail.com">rdulal71@gmail.com</a></li>
-                    <li><i class="fas fa-phone me-2"></i><a href="tel:+14376635470">(437) 663-5470</a></li>
+                    <li><i class="fas fa-envelope me-2"></i><a href="mailto:r**71@gmail.com">example@mail.com</a></li>
+                    <li><i class="fas fa-phone me-2"></i><a href="tel:+1234567">(123) 456-7890</a></li>
                     <li><i class="fas fa-map-marker-alt me-2"></i>Lindsay, ON</li>
                 </ul>
                 <!-- Skills -->
