--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Website - www.georajesh.github.io -->
+<!-- Website  for - www.georajesh.github.io -->
 <html lang="en">
   <head>
     <meta charset="UTF-8">
