--- a/html/resume.html
+++ b/html/resume.html
@@ -6,17 +6,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Rajesh Dulal</title>
         <!-- Linking CSS File : External CSS Stylesheet https://www.w3schools.com/html/html_css.asp -->
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css\style.css">
         <!-- Fontawesome link: Font Awesome Intro https://www.w3schools.com/icons/fontawesome_icons_intro.asp -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     </head>
     <body>
         <!-- Header & Navbar Create a responsive heeader W3School https://www.w3schools.com/howto/howto_css_responsive_header.asp -->
         <div class="header">
-            <a href="index.html" class="title">Rajesh Dulal</a>
+            <a href="html\index.html" class="title">Rajesh Dulal</a>
             <div class="header-right">
-                <a href="index.html">Home</a>
-                <a class="active" href="resume.html">Resume</a>
+                <a href="html\index.html">Home</a>
+                <a class="active" href="html\resume.html">Resume</a>
                 <a href="https://www.linkedin.com/in/rajesh-dulal-chhetri-738a69181/">Connect</a>
             </div>
         </div>
@@ -24,7 +24,7 @@
         <!-- Curriculum Vitae Section -->
         <section class="container">
             <div class="left-side">
-                <img class="profile" src="Profile.jpeg" alt="profile-img">
+                <img class="profile" src="media\Profile.jpeg" alt="profile-img">
                 <ul class="social-icons"> <!--Inspired from my old website :https://dulalrajesh.com.np -->
                     <li><a href="https://www.twitter.com/__samrat__/" class="twitter"><i class="fab fa-twitter"></i></a></li> 
                     <li><a href="https://www.facebook.com/samrat.hope/" class="facebook"><i class="fab fa-facebook-f"></i></a></li>
