--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <body>
     <!-- Header & Navbar Create a responsive heeader W3School https://www.w3schools.com/howto/howto_css_responsive_header.asp -->
     <header class="header"> 
-      <a href="html\index.html" class="title">Rajesh Dulal</a>
+      <a href="index.html" class="title">Rajesh Dulal</a>
       <nav class="header-right"> 
-        <a class="active" href="html\index.html">Home</a>
+        <a class="active" href="index.html">Home</a>
         <a href="html\resume.html">Resume</a>
         <a href="https://www.linkedin.com/in/rajesh-dulal-chhetri-738a69181/">Connect</a>
       </nav>
