--- a/html/resume.html
+++ b/html/resume.html
@@ -13,9 +13,9 @@
     <body>
         <!-- Header & Navbar Create a responsive heeader W3School https://www.w3schools.com/howto/howto_css_responsive_header.asp -->
         <div class="header">
-            <a href="html\index.html" class="title">Rajesh Dulal</a>
+            <a href="index.html" class="title">Rajesh Dulal</a>
             <div class="header-right">
-                <a href="html\index.html">Home</a>
+                <a href="index.html">Home</a>
                 <a class="active" href="html\resume.html">Resume</a>
                 <a href="https://www.linkedin.com/in/rajesh-dulal-chhetri-738a69181/">Connect</a>
             </div>
